# semrush-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: auto-tag.yml  release.yml  test.yml
docs/: semrush-cli-prd.md
src/: error.rs  lib.rs  main.rs
src/api/: auth.rs  client.rs  columns.rs  cost.rs  csv_parser.rs  mod.rs  rate_limiter.rs  v1_backlinks.rs  v3_analytics.rs  v3_trends.rs  v4_local.rs  v4_projects.rs
src/batch/: mod.rs  recipe.rs
src/cache/: disk.rs  mod.rs
src/cli/: account.rs  backlink.rs  batch.rs  domain.rs  keyword.rs  local.rs  mod.rs  overview.rs  project.rs  trends.rs
src/config/: settings.rs
src/models/: mod.rs
src/output/: csv.rs  json.rs  jsonl.rs  mod.rs  table.rs
tests/: cli.rs
