[package]
name = "semrush-rs"
version = "0.1.1"
edition = "2021"
rust-version = "1.80.0"
description = "A high-performance, agent-friendly CLI for the Semrush API"
license = "MIT"

[lib]
name = "semrush"
path = "src/lib.rs"

[[bin]]
name = "semrush"
path = "src/main.rs"

[[bin]]
name = "gen-man"
path = "src/bin/gen-man.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env", "string"] }
clap_complete = "4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "gzip"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
toml = "0.8"

# Output
tabled = "0.17"

# Rate limiting
governor = "0.8"

# Caching
sha2 = "0.10"
hex = "0.4"
directories = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Progress
indicatif = "0.17"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Man pages
clap_mangen = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
wiremock = "0.6"
tempfile = "3"
